--- a/build.xml
+++ b/build.xml
@@ -13,19 +13,19 @@
                 <attribute name="Class-Path" value="."/>
             </manifest>
             <fileset dir="${dir.jarfile}/bin"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/org.eclipse.osgi_3.11.2.v20161107-1947.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/org.eclipse.core.commands_3.8.0.v20160316-1921.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/org.eclipse.core.runtime_3.12.0.v20160606-1342.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/org.eclipse.equinox.common_3.8.0.v20160509-1230.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/org.eclipse.equinox.registry_3.6.100.v20160223-2218.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/org.eclipse.jface.text_3.11.2.v20161113-1700.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/org.eclipse.jface_3.12.1.v20160923-1528.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/org.eclipse.swt.win32.win32.x86_64_3.105.2.v20161122-0613.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/org.eclipse.text_3.6.0.v20160503-1849.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/com.ibm.icu_56.1.0.v201601250100.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/org.eclipse.ui.forms_3.7.0.v20160518-1929.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/org.eclipse.ui.workbench_3.108.2.v20161025-2029.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/YahtzeePictures.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/lib/org.eclipse.osgi_3.11.2.v20161107-1947.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/lib/org.eclipse.core.commands_3.8.0.v20160316-1921.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/lib/org.eclipse.core.runtime_3.12.0.v20160606-1342.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/lib/org.eclipse.equinox.common_3.8.0.v20160509-1230.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/lib/org.eclipse.equinox.registry_3.6.100.v20160223-2218.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/lib/org.eclipse.jface.text_3.11.2.v20161113-1700.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/lib/org.eclipse.jface_3.12.1.v20160923-1528.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/lib/org.eclipse.swt.win32.win32.x86_64_3.105.2.v20161122-0613.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/lib/org.eclipse.text_3.6.0.v20160503-1849.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/lib/com.ibm.icu_56.1.0.v201601250100.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/lib/org.eclipse.ui.forms_3.7.0.v20160518-1929.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/lib/org.eclipse.ui.workbench_3.108.2.v20161025-2029.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="${dir.jarfile}/pics/YahtzeePictures.jar"/>
         </jar>
     </target>
 </project>
